create gesture detector widget

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  font_awesome_flutter: ^10.2.1
   google_fonts: ^3.0.1
 
 dev_dependencies:
